{
  "version": 4,
  "terraform_version": "1.13.5",
  "serial": 550,
  "lineage": "88009a2e-9086-6e11-5b13-94b1177a1235",
  "resources": [
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "existing_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:258675983086:vpc/vpc-00f02dc789ed26995",
            "cidr_block": "173.0.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-0359fa0037bab6de8",
                "cidr_block": "173.0.0.0/16",
                "state": "associated"
              }
            ],
            "default": false,
            "dhcp_options_id": "dopt-01b58f3750b963cc1",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "filter": [
              {
                "name": "tag:Name",
                "values": [
                  "project-vpc"
                ]
              }
            ],
            "id": "vpc-00f02dc789ed26995",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-01e58b2f25c2da6aa",
            "owner_id": "258675983086",
            "region": "us-east-1",
            "tags": {
              "Name": "project-vpc",
              "access": "public",
              "connection": "peering_connection_giver",
              "created_by": "mukesh"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:258675983086:loadbalancer/app/sonarqube-alb-internet/1e1e3531add71b53",
            "arn_suffix": "app/sonarqube-alb-internet/1e1e3531add71b53",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "sonarqube-alb-internet-1872327913.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:258675983086:loadbalancer/app/sonarqube-alb-internet/1e1e3531add71b53",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "sonarqube-alb-internet",
            "preserve_host_header": false,
            "region": "us-east-1",
            "security_groups": [
              "sg-0aeb62b7925ad25f5"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-035873b8d3d902b6b"
              },
              {
                "subnet_id": "subnet-0542cab357678e3c6"
              }
            ],
            "subnets": [
              "subnet-035873b8d3d902b6b",
              "subnet-0542cab357678e3c6"
            ],
            "tags": {
              "Name": "sonarqube-alb-intenet-facing",
              "type": "load balancer"
            },
            "tags_all": {
              "Name": "sonarqube-alb-intenet-facing",
              "type": "load balancer"
            },
            "vpc_id": "vpc-04d1233a819e0e5e2",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:258675983086:loadbalancer/app/sonarqube-alb-internet/1e1e3531add71b53"
          },
          "dependencies": [
            "module.security.aws_security_group.public_sg",
            "module.vpc.aws_subnet.public_a",
            "module.vpc.aws_subnet.public_b",
            "module.vpc.aws_vpc.sonarqube_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:258675983086:listener/app/sonarqube-alb-internet/1e1e3531add71b53/c2d1588f41765590",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:258675983086:targetgroup/sonarqube-tg/2011cf1d5948376e",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:258675983086:listener/app/sonarqube-alb-internet/1e1e3531add71b53/c2d1588f41765590",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:258675983086:loadbalancer/app/sonarqube-alb-internet/1e1e3531add71b53",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "region": "us-east-1",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:258675983086:listener/app/sonarqube-alb-internet/1e1e3531add71b53/c2d1588f41765590"
          },
          "dependencies": [
            "module.alb.aws_lb.alb",
            "module.alb.aws_lb_target_group.tg",
            "module.security.aws_security_group.public_sg",
            "module.vpc.aws_subnet.public_a",
            "module.vpc.aws_subnet.public_b",
            "module.vpc.aws_vpc.sonarqube_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:258675983086:targetgroup/sonarqube-tg/2011cf1d5948376e",
            "arn_suffix": "targetgroup/sonarqube-tg/2011cf1d5948376e",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "9000",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:258675983086:targetgroup/sonarqube-tg/2011cf1d5948376e",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:258675983086:loadbalancer/app/sonarqube-alb-internet/1e1e3531add71b53"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "sonarqube-tg",
            "port": 9000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "us-east-1",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "access": "through alb",
              "open_port": "9000 and 5432",
              "subnet": "private"
            },
            "tags_all": {
              "access": "through alb",
              "open_port": "9000 and 5432",
              "subnet": "private"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-04d1233a819e0e5e2"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:258675983086:targetgroup/sonarqube-tg/2011cf1d5948376e"
          },
          "dependencies": [
            "module.vpc.aws_vpc.sonarqube_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "aws_instance",
      "name": "private_server_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-00b13f11600160c10",
            "arn": "arn:aws:ec2:us-east-1:258675983086:instance/i-0a801e32d4d9287fd",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0a801e32d4d9287fd",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.large",
            "ipv6_address_count": 0,
            "key_name": "sonarqube-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0597d010c9c0a2bb8"
              }
            ],
            "primary_network_interface_id": "eni-0597d010c9c0a2bb8",
            "private_dns": "ip-10-0-3-235.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.3.235",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-053a58ba5f05a58b3",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-01eaf7a295641392b",
            "tags": {
              "Name": "private-server-1a",
              "az": "1a"
            },
            "tags_all": {
              "Name": "private-server-1a",
              "az": "1a"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-03f07a1c8e9bdca98",
              "sg-0aab7837f8e3d52a9"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "258675983086",
            "id": "i-0a801e32d4d9287fd",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.compute.data.aws_ami.ubuntu",
            "module.keypair.aws_key_pair.key",
            "module.keypair.tls_private_key.key",
            "module.security.aws_security_group.postgres_sg",
            "module.security.aws_security_group.private_sg",
            "module.security.aws_security_group.public_sg",
            "module.vpc.aws_subnet.private_a",
            "module.vpc.aws_subnet.private_b",
            "module.vpc.aws_vpc.sonarqube_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "aws_instance",
      "name": "private_server_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-00b13f11600160c10",
            "arn": "arn:aws:ec2:us-east-1:258675983086:instance/i-0597d48d8ea27f82d",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0597d48d8ea27f82d",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.large",
            "ipv6_address_count": 0,
            "key_name": "sonarqube-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-014d19ff7b2d72aae"
              }
            ],
            "primary_network_interface_id": "eni-014d19ff7b2d72aae",
            "private_dns": "ip-10-0-4-140.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.4.140",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0b2b2adb85f59b554",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0f662c33fcc66c815",
            "tags": {
              "Name": "private-server-1b",
              "az": "1b"
            },
            "tags_all": {
              "Name": "private-server-1b",
              "az": "1b"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-03f07a1c8e9bdca98",
              "sg-0aab7837f8e3d52a9"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "258675983086",
            "id": "i-0597d48d8ea27f82d",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.compute.data.aws_ami.ubuntu",
            "module.keypair.aws_key_pair.key",
            "module.keypair.tls_private_key.key",
            "module.security.aws_security_group.postgres_sg",
            "module.security.aws_security_group.private_sg",
            "module.security.aws_security_group.public_sg",
            "module.vpc.aws_subnet.private_a",
            "module.vpc.aws_subnet.private_b",
            "module.vpc.aws_vpc.sonarqube_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "aws_instance",
      "name": "public_ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-00b13f11600160c10",
            "arn": "arn:aws:ec2:us-east-1:258675983086:instance/i-0d10193ac0496b53f",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0d10193ac0496b53f",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "sonarqube-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0a018e5e14de37c1a"
              }
            ],
            "primary_network_interface_id": "eni-0a018e5e14de37c1a",
            "private_dns": "ip-10-0-1-22.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.22",
            "public_dns": "ec2-54-85-8-53.compute-1.amazonaws.com",
            "public_ip": "54.85.8.53",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0c150f16fe20a8b17",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0542cab357678e3c6",
            "tags": {
              "Name": "public-ec2-instance",
              "type": "bastion host"
            },
            "tags_all": {
              "Name": "public-ec2-instance",
              "type": "bastion host"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0aeb62b7925ad25f5"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "258675983086",
            "id": "i-0d10193ac0496b53f",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.compute.data.aws_ami.ubuntu",
            "module.keypair.aws_key_pair.key",
            "module.keypair.tls_private_key.key",
            "module.security.aws_security_group.public_sg",
            "module.vpc.aws_subnet.public_a",
            "module.vpc.aws_subnet.public_b",
            "module.vpc.aws_vpc.sonarqube_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "private_a_attachment",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:258675983086:targetgroup/sonarqube-tg/2011cf1d5948376e-20251121083955022700000008",
            "port": 9000,
            "region": "us-east-1",
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:258675983086:targetgroup/sonarqube-tg/2011cf1d5948376e",
            "target_id": "i-0a801e32d4d9287fd"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.alb.aws_lb_target_group.tg",
            "module.compute.aws_instance.private_server_a",
            "module.compute.data.aws_ami.ubuntu",
            "module.keypair.aws_key_pair.key",
            "module.keypair.tls_private_key.key",
            "module.security.aws_security_group.postgres_sg",
            "module.security.aws_security_group.private_sg",
            "module.security.aws_security_group.public_sg",
            "module.vpc.aws_subnet.private_a",
            "module.vpc.aws_subnet.private_b",
            "module.vpc.aws_vpc.sonarqube_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "private_b_attachment",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:258675983086:targetgroup/sonarqube-tg/2011cf1d5948376e-20251121083954795900000007",
            "port": 9000,
            "region": "us-east-1",
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:258675983086:targetgroup/sonarqube-tg/2011cf1d5948376e",
            "target_id": "i-0597d48d8ea27f82d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.alb.aws_lb_target_group.tg",
            "module.compute.aws_instance.private_server_b",
            "module.compute.data.aws_ami.ubuntu",
            "module.keypair.aws_key_pair.key",
            "module.keypair.tls_private_key.key",
            "module.security.aws_security_group.postgres_sg",
            "module.security.aws_security_group.private_sg",
            "module.security.aws_security_group.public_sg",
            "module.vpc.aws_subnet.private_a",
            "module.vpc.aws_subnet.private_b",
            "module.vpc.aws_vpc.sonarqube_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-09f9b29d13f22816c",
            "arn": "arn:aws:ec2:us-east-1:258675983086:elastic-ip/eipalloc-09f9b29d13f22816c",
            "association_id": "eipassoc-0bdd3659dc4c12928",
            "domain": "vpc",
            "id": "eipalloc-09f9b29d13f22816c",
            "network_border_group": "us-east-1",
            "network_interface": "eni-03b44071d25690056",
            "private_dns": "ip-10-0-1-134.ec2.internal",
            "private_ip": "10.0.1.134",
            "public_dns": "ec2-3-212-95-182.compute-1.amazonaws.com",
            "public_ip": "3.212.95.182",
            "public_ipv4_pool": "amazon",
            "region": "us-east-1",
            "tags": {
              "Name": "nat-eip"
            },
            "tags_all": {
              "Name": "nat-eip"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:258675983086:internet-gateway/igw-0db45b1ad26443051",
            "id": "igw-0db45b1ad26443051",
            "owner_id": "258675983086",
            "region": "us-east-1",
            "tags": {
              "Name": "sonarqube-igw",
              "access": "public",
              "gateway_type": "main-internet-gateway"
            },
            "tags_all": {
              "Name": "sonarqube-igw",
              "access": "public",
              "gateway_type": "main-internet-gateway"
            },
            "vpc_id": "vpc-04d1233a819e0e5e2"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.sonarqube_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-09f9b29d13f22816c",
            "association_id": "eipassoc-0bdd3659dc4c12928",
            "connectivity_type": "public",
            "id": "nat-0cd4e93e85bc7f11e",
            "network_interface_id": "eni-03b44071d25690056",
            "private_ip": "10.0.1.134",
            "public_ip": "3.212.95.182",
            "region": "us-east-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0542cab357678e3c6",
            "tags": {
              "Name": "sonarqube-nat",
              "access": "public ssh access for private subnets",
              "attatched_to": "public-subnet-1a"
            },
            "tags_all": {
              "Name": "sonarqube-nat",
              "access": "public ssh access for private subnets",
              "attatched_to": "public-subnet-1a"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_eip.nat_eip",
            "module.vpc.aws_subnet.public_a",
            "module.vpc.aws_subnet.public_b",
            "module.vpc.aws_vpc.sonarqube_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:258675983086:route-table/rtb-0f8b8595caa556a66",
            "id": "rtb-0f8b8595caa556a66",
            "owner_id": "258675983086",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0cd4e93e85bc7f11e",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "sonarqube-private-route-table",
              "attatched_to": "public-subnet-1 and public-subnet-2"
            },
            "tags_all": {
              "Name": "sonarqube-private-route-table",
              "attatched_to": "public-subnet-1 and public-subnet-2"
            },
            "timeouts": null,
            "vpc_id": "vpc-04d1233a819e0e5e2"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "258675983086",
            "id": "rtb-0f8b8595caa556a66",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.network.aws_eip.nat_eip",
            "module.network.aws_nat_gateway.nat_gw",
            "module.vpc.aws_subnet.public_a",
            "module.vpc.aws_subnet.public_b",
            "module.vpc.aws_vpc.sonarqube_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:258675983086:route-table/rtb-085fc8b6b8db0d6eb",
            "id": "rtb-085fc8b6b8db0d6eb",
            "owner_id": "258675983086",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0db45b1ad26443051",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "sonarqube-public-route-table",
              "attatched_to": "public-subnet-1 and public-subnet-2"
            },
            "tags_all": {
              "Name": "sonarqube-public-route-table",
              "attatched_to": "public-subnet-1 and public-subnet-2"
            },
            "timeouts": null,
            "vpc_id": "vpc-04d1233a819e0e5e2"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "258675983086",
            "id": "rtb-085fc8b6b8db0d6eb",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.network.aws_internet_gateway.igw",
            "module.vpc.aws_vpc.sonarqube_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0acc3ac272ecff5ea",
            "region": "us-east-1",
            "route_table_id": "rtb-0f8b8595caa556a66",
            "subnet_id": "subnet-01eaf7a295641392b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_eip.nat_eip",
            "module.network.aws_nat_gateway.nat_gw",
            "module.network.aws_route_table.private_rt",
            "module.vpc.aws_subnet.private_a",
            "module.vpc.aws_subnet.private_b",
            "module.vpc.aws_subnet.public_a",
            "module.vpc.aws_subnet.public_b",
            "module.vpc.aws_vpc.sonarqube_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0197881c932057114",
            "region": "us-east-1",
            "route_table_id": "rtb-0f8b8595caa556a66",
            "subnet_id": "subnet-0f662c33fcc66c815"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_eip.nat_eip",
            "module.network.aws_nat_gateway.nat_gw",
            "module.network.aws_route_table.private_rt",
            "module.vpc.aws_subnet.private_a",
            "module.vpc.aws_subnet.private_b",
            "module.vpc.aws_subnet.public_a",
            "module.vpc.aws_subnet.public_b",
            "module.vpc.aws_vpc.sonarqube_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f33c04c2911ccb65",
            "region": "us-east-1",
            "route_table_id": "rtb-085fc8b6b8db0d6eb",
            "subnet_id": "subnet-0542cab357678e3c6"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_internet_gateway.igw",
            "module.network.aws_route_table.public_rt",
            "module.vpc.aws_subnet.public_a",
            "module.vpc.aws_subnet.public_b",
            "module.vpc.aws_vpc.sonarqube_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04da1fa1dfacf38f7",
            "region": "us-east-1",
            "route_table_id": "rtb-085fc8b6b8db0d6eb",
            "subnet_id": "subnet-035873b8d3d902b6b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.network.aws_internet_gateway.igw",
            "module.network.aws_route_table.public_rt",
            "module.vpc.aws_subnet.public_a",
            "module.vpc.aws_subnet.public_b",
            "module.vpc.aws_vpc.sonarqube_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "private_nacl",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:258675983086:network-acl/acl-019d3f44eef1184ba",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 22,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 110,
                "to_port": 22
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 5432,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 140,
                "to_port": 5432
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 8080,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 120,
                "to_port": 8080
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 80,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 150,
                "to_port": 80
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 9000,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 130,
                "to_port": 9000
              }
            ],
            "id": "acl-019d3f44eef1184ba",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 5432,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 130,
                "to_port": 5432
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 9000,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 120,
                "to_port": 9000
              },
              {
                "action": "allow",
                "cidr_block": "103.87.45.36/32",
                "from_port": 22,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 110,
                "to_port": 22
              },
              {
                "action": "allow",
                "cidr_block": "173.0.0.0/16",
                "from_port": 22,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 111,
                "to_port": 22
              }
            ],
            "owner_id": "258675983086",
            "region": "us-east-1",
            "subnet_ids": [
              "subnet-01eaf7a295641392b",
              "subnet-0f662c33fcc66c815"
            ],
            "tags": {
              "Name": "private-nacl",
              "access": "private",
              "attached_to": "private subnet a and b"
            },
            "tags_all": {
              "Name": "private-nacl",
              "access": "private",
              "attached_to": "private subnet a and b"
            },
            "vpc_id": "vpc-04d1233a819e0e5e2"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.sonarqube_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "public_nacl",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:258675983086:network-acl/acl-064539403a4154323",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-064539403a4154323",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 443,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": null,
                "protocol": "tcp",
                "rule_no": 130,
                "to_port": 443
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 80,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": null,
                "protocol": "tcp",
                "rule_no": 120,
                "to_port": 80
              },
              {
                "action": "allow",
                "cidr_block": "10.0.0.0/16",
                "from_port": 22,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 1800,
                "to_port": 22
              },
              {
                "action": "allow",
                "cidr_block": "103.87.45.36/32",
                "from_port": 22,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": null,
                "protocol": "tcp",
                "rule_no": 110,
                "to_port": 22
              },
              {
                "action": "allow",
                "cidr_block": "173.0.0.0/16",
                "from_port": 22,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 1700,
                "to_port": 22
              }
            ],
            "owner_id": "258675983086",
            "region": "us-east-1",
            "subnet_ids": [
              "subnet-035873b8d3d902b6b",
              "subnet-0542cab357678e3c6"
            ],
            "tags": {
              "Name": "public-nacl",
              "access": "public",
              "attached_to": "public subnets a and b"
            },
            "tags_all": {
              "Name": "public-nacl",
              "access": "public",
              "attached_to": "public subnets a and b"
            },
            "vpc_id": "vpc-04d1233a819e0e5e2"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.sonarqube_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_network_acl_association",
      "name": "pri_subnet_a_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "aclassoc-01f8a5212a74e96a5",
            "network_acl_id": "acl-019d3f44eef1184ba",
            "region": "us-east-1",
            "subnet_id": "subnet-01eaf7a295641392b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.security.aws_network_acl.private_nacl",
            "module.vpc.aws_subnet.private_a",
            "module.vpc.aws_subnet.private_b",
            "module.vpc.aws_vpc.sonarqube_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_network_acl_association",
      "name": "pri_subnet_b_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "aclassoc-0f877850ed3a9ed80",
            "network_acl_id": "acl-019d3f44eef1184ba",
            "region": "us-east-1",
            "subnet_id": "subnet-0f662c33fcc66c815"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.security.aws_network_acl.private_nacl",
            "module.vpc.aws_subnet.private_a",
            "module.vpc.aws_subnet.private_b",
            "module.vpc.aws_vpc.sonarqube_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_network_acl_association",
      "name": "pub_subnet_a_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "aclassoc-029fe5a8754f3ed25",
            "network_acl_id": "acl-064539403a4154323",
            "region": "us-east-1",
            "subnet_id": "subnet-0542cab357678e3c6"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.security.aws_network_acl.public_nacl",
            "module.vpc.aws_subnet.public_a",
            "module.vpc.aws_subnet.public_b",
            "module.vpc.aws_vpc.sonarqube_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_network_acl_association",
      "name": "pub_subnet_b_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "aclassoc-03bd9ec1bececc3d8",
            "network_acl_id": "acl-064539403a4154323",
            "region": "us-east-1",
            "subnet_id": "subnet-035873b8d3d902b6b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.security.aws_network_acl.public_nacl",
            "module.vpc.aws_subnet.public_a",
            "module.vpc.aws_subnet.public_b",
            "module.vpc.aws_vpc.sonarqube_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "postgres_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:258675983086:security-group/sg-0aab7837f8e3d52a9",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0aab7837f8e3d52a9",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-03f07a1c8e9bdca98"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "postgres-sg",
            "name_prefix": "",
            "owner_id": "258675983086",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "sonarqube-db-sg",
              "attached_to": "pri-db-subnet-1 and pri-db-subnet-2",
              "availibility": "1a 1b"
            },
            "tags_all": {
              "Name": "sonarqube-db-sg",
              "attached_to": "pri-db-subnet-1 and pri-db-subnet-2",
              "availibility": "1a 1b"
            },
            "timeouts": null,
            "vpc_id": "vpc-04d1233a819e0e5e2"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "258675983086",
            "id": "sg-0aab7837f8e3d52a9",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.security.aws_security_group.private_sg",
            "module.security.aws_security_group.public_sg",
            "module.vpc.aws_vpc.sonarqube_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "private_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:258675983086:security-group/sg-03f07a1c8e9bdca98",
            "description": "Allow ALB to EC2 traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03f07a1c8e9bdca98",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "173.0.0.0/16"
                ],
                "description": "SSH from requester VPC CIDR",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "App traffic from ALB",
                "from_port": 9000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0aeb62b7925ad25f5"
                ],
                "self": false,
                "to_port": 9000
              },
              {
                "cidr_blocks": [],
                "description": "Postgres port from private SG",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 5432
              },
              {
                "cidr_blocks": [],
                "description": "SSH from bastion SG",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0aeb62b7925ad25f5"
                ],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "SonarQube port from private SG",
                "from_port": 9000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 9000
              }
            ],
            "name": "private-sg",
            "name_prefix": "",
            "owner_id": "258675983086",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "sonarqube-private-sg",
              "attached_to": "pri-subnet-1 and pri-subnet-2",
              "availibility": "1a 1b"
            },
            "tags_all": {
              "Name": "sonarqube-private-sg",
              "attached_to": "pri-subnet-1 and pri-subnet-2",
              "availibility": "1a 1b"
            },
            "timeouts": null,
            "vpc_id": "vpc-04d1233a819e0e5e2"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "258675983086",
            "id": "sg-03f07a1c8e9bdca98",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.security.aws_security_group.public_sg",
            "module.vpc.aws_vpc.sonarqube_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "public_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:258675983086:security-group/sg-0aeb62b7925ad25f5",
            "description": "Allow HTTP, HTTPS, SSH",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0aeb62b7925ad25f5",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "ephemeral ports",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 65535
              },
              {
                "cidr_blocks": [
                  "103.87.45.36/32",
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "public-sg",
            "name_prefix": "",
            "owner_id": "258675983086",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "sonarqube-public-sg",
              "attached_to": "pub-subnet-1 and pub-subnet-2",
              "availibility": "1a 1b"
            },
            "tags_all": {
              "Name": "sonarqube-public-sg",
              "attached_to": "pub-subnet-1 and pub-subnet-2",
              "availibility": "1a 1b"
            },
            "timeouts": null,
            "vpc_id": "vpc-04d1233a819e0e5e2"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "258675983086",
            "id": "sg-0aeb62b7925ad25f5",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.sonarqube_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:258675983086:subnet/subnet-01eaf7a295641392b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01eaf7a295641392b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "258675983086",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "sonar-private-subnet-a",
              "access": "through-bastion-host",
              "attatched_to": "private-security-group",
              "az": "1a"
            },
            "tags_all": {
              "Name": "sonar-private-subnet-a",
              "access": "through-bastion-host",
              "attatched_to": "private-security-group",
              "az": "1a"
            },
            "vpc_id": "vpc-04d1233a819e0e5e2"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "258675983086",
            "id": "subnet-01eaf7a295641392b",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.sonarqube_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:258675983086:subnet/subnet-0f662c33fcc66c815",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f662c33fcc66c815",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "258675983086",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "sonar-private-subnet-b",
              "access": "through-bastion-host",
              "attatched_to": "private-security-group",
              "az": "1b"
            },
            "tags_all": {
              "Name": "sonar-private-subnet-b",
              "access": "through-bastion-host",
              "attatched_to": "private-security-group",
              "az": "1b"
            },
            "vpc_id": "vpc-04d1233a819e0e5e2"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "258675983086",
            "id": "subnet-0f662c33fcc66c815",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.sonarqube_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:258675983086:subnet/subnet-0542cab357678e3c6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0542cab357678e3c6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "258675983086",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "sonar-public-subnet-a",
              "access": "public",
              "attatched_to": "public-security-group",
              "az": "1a"
            },
            "tags_all": {
              "Name": "sonar-public-subnet-a",
              "access": "public",
              "attatched_to": "public-security-group",
              "az": "1a"
            },
            "vpc_id": "vpc-04d1233a819e0e5e2"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "258675983086",
            "id": "subnet-0542cab357678e3c6",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.sonarqube_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:258675983086:subnet/subnet-035873b8d3d902b6b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-035873b8d3d902b6b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "258675983086",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "sonar-public-subnet-b",
              "access": "public",
              "attatched_to": "public-security-group",
              "az": "1b"
            },
            "tags_all": {
              "Name": "sonar-public-subnet-b",
              "access": "public",
              "attatched_to": "public-security-group",
              "az": "1b"
            },
            "vpc_id": "vpc-04d1233a819e0e5e2"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "258675983086",
            "id": "subnet-035873b8d3d902b6b",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.sonarqube_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "sonarqube_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:258675983086:vpc/vpc-04d1233a819e0e5e2",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0cbabe3e300bd84bc",
            "default_route_table_id": "rtb-00a871f04ac46acff",
            "default_security_group_id": "sg-0f446457349e59767",
            "dhcp_options_id": "dopt-01b58f3750b963cc1",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-04d1233a819e0e5e2",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-00a871f04ac46acff",
            "owner_id": "258675983086",
            "region": "us-east-1",
            "tags": {
              "Name": "sonarqube-vpc",
              "env": "sonarqube-env"
            },
            "tags_all": {
              "Name": "sonarqube-vpc",
              "env": "sonarqube-env"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "258675983086",
            "id": "vpc-04d1233a819e0e5e2",
            "region": "us-east-1"
          }
        }
      ]
    },
    {
      "module": "module.vpc_peering",
      "mode": "managed",
      "type": "aws_route",
      "name": "accepter_routes",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "173.0.0.0/16",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0f8b8595caa556a662531684018",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "us-east-1",
            "route_table_id": "rtb-0f8b8595caa556a66",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": "pcx-075e69bd9ba5111fe"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "258675983086",
            "destination_cidr_block": "173.0.0.0/16",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "us-east-1",
            "route_table_id": "rtb-0f8b8595caa556a66"
          },
          "dependencies": [
            "data.aws_vpc.existing_vpc",
            "module.network.aws_eip.nat_eip",
            "module.network.aws_nat_gateway.nat_gw",
            "module.network.aws_route_table.private_rt",
            "module.vpc.aws_subnet.public_a",
            "module.vpc.aws_subnet.public_b",
            "module.vpc.aws_vpc.sonarqube_vpc",
            "module.vpc_peering.aws_vpc_peering_connection.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_peering",
      "mode": "managed",
      "type": "aws_route",
      "name": "requester_routes",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "10.0.0.0/16",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-01e58b2f25c2da6aa179966490",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "us-east-1",
            "route_table_id": "rtb-01e58b2f25c2da6aa",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": "pcx-075e69bd9ba5111fe"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "258675983086",
            "destination_cidr_block": "10.0.0.0/16",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "us-east-1",
            "route_table_id": "rtb-01e58b2f25c2da6aa"
          },
          "dependencies": [
            "data.aws_route_tables.existing_vpc_rts",
            "data.aws_vpc.existing_vpc",
            "module.vpc.aws_vpc.sonarqube_vpc",
            "module.vpc_peering.aws_vpc_peering_connection.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "10.0.0.0/16",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-03740b0772a667c35179966490",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "us-east-1",
            "route_table_id": "rtb-03740b0772a667c35",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": "pcx-075e69bd9ba5111fe"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "258675983086",
            "destination_cidr_block": "10.0.0.0/16",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "us-east-1",
            "route_table_id": "rtb-03740b0772a667c35"
          },
          "dependencies": [
            "data.aws_route_tables.existing_vpc_rts",
            "data.aws_vpc.existing_vpc",
            "module.vpc.aws_vpc.sonarqube_vpc",
            "module.vpc_peering.aws_vpc_peering_connection.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "10.0.0.0/16",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-04152d1c7b3c2ff52179966490",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "us-east-1",
            "route_table_id": "rtb-04152d1c7b3c2ff52",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": "pcx-075e69bd9ba5111fe"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "258675983086",
            "destination_cidr_block": "10.0.0.0/16",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "us-east-1",
            "route_table_id": "rtb-04152d1c7b3c2ff52"
          },
          "dependencies": [
            "data.aws_route_tables.existing_vpc_rts",
            "data.aws_vpc.existing_vpc",
            "module.vpc.aws_vpc.sonarqube_vpc",
            "module.vpc_peering.aws_vpc_peering_connection.this"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "10.0.0.0/16",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-04556671853ad6709179966490",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "us-east-1",
            "route_table_id": "rtb-04556671853ad6709",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": "pcx-075e69bd9ba5111fe"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "258675983086",
            "destination_cidr_block": "10.0.0.0/16",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "us-east-1",
            "route_table_id": "rtb-04556671853ad6709"
          },
          "dependencies": [
            "data.aws_route_tables.existing_vpc_rts",
            "data.aws_vpc.existing_vpc",
            "module.vpc.aws_vpc.sonarqube_vpc",
            "module.vpc_peering.aws_vpc_peering_connection.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_peering",
      "mode": "managed",
      "type": "aws_vpc_peering_connection",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accept_status": "active",
            "accepter": [
              {
                "allow_remote_vpc_dns_resolution": false
              }
            ],
            "auto_accept": true,
            "id": "pcx-075e69bd9ba5111fe",
            "peer_owner_id": "258675983086",
            "peer_region": "us-east-1",
            "peer_vpc_id": "vpc-04d1233a819e0e5e2",
            "region": "us-east-1",
            "requester": [
              {
                "allow_remote_vpc_dns_resolution": false
              }
            ],
            "tags": {
              "Name": "peering-173-to-10",
              "Owner": "Mukesh",
              "Project": "sonarqube-deployment"
            },
            "tags_all": {
              "Name": "peering-173-to-10",
              "Owner": "Mukesh",
              "Project": "sonarqube-deployment"
            },
            "vpc_id": "vpc-00f02dc789ed26995"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_vpc.existing_vpc",
            "module.vpc.aws_vpc.sonarqube_vpc"
          ]
        }
      ]
    }
  ]
}